tests/baselines/reference/exportAssignmentInternalModule.errors.txt
exportAssignmentInternalModule_A.ts(1,1): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== exportAssignmentInternalModule_B.ts (0 errors) ====
    import modM = require("exportAssignmentInternalModule_A");
    
    var n: number = modM.x;
==== exportAssignmentInternalModule_A.ts (1 errors) ====
    module M {
    ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export var x;
    }
    
    export = M;
    